Okay, I think I have everything working.  #famousLastWords

--- a/pwReqTest-3.html
+++ b/pwReqTest-3.html
@@ -31,7 +31,9 @@
 						<input name="pword2" id="pword2" type="password" class="confirmPassword" data-match="pword1">
 					</div>
 					<div id="passwordRequirementsEn"></div>
-					<input value="Submit" id="submitBtn" type="button">
+					<div class="fieldHolder">
+						<input value="Submit" id="submitBtn" type="button">
+					</div>
 					<details>
 						<summary>Code</summary>
 						<pre>
@@ -67,7 +69,9 @@
 						<label for="pword4">Confirmez le mot de passe :</label>
 						<input name="pword4" id="pword4" type="password" class="confirmPassword" data-match="pword3">
 					</div>
-					<input value="Submit" id="submitBtn2" type="button">
+					<div class="fieldHolder">
+						<input value="Submit" id="submitBtn2" type="button">
+					</div>
 					<details>
 						<summary>Code</summary>
 <pre>
