I wrote up some documentation that will have to be updated once I make this an npm package.  But it's good for now.

--- a/pwReqTest-3.html
+++ b/pwReqTest-3.html
@@ -23,7 +23,7 @@
 				<section>
 					<h2>In English</h2>
 					<div class="fieldHolder">
-						<label for="pword1">Password:</label>
+						<label for="pword1">New Password:</label>
 						<input name="pword1" id="pword1" type="password" class="newPassword lowercase uppercase specialChar digit doubleChars nospaces" data-minchars="8" data-maxchars="10" data-match="pword2" data-passwordRequirementsDiv="passwordRequirementsEn">
 					</div>
 					<div class="fieldHolder">
@@ -62,7 +62,7 @@
 					<div id="passwordRequirementsFr"></div>
 					<h2>En Français</h2>
 					<div class="fieldHolder">
-						<label for="pword3">Mot de passe :</label>
+						<label for="pword3">Nouveau mot de passe :</label>
 						<input name="pword3" id="pword3" type="password" class="newPassword lowercase uppercase specialChar digit doubleChars" data-minchars="8" data-match="pword4"  data-passwordRequirementsDiv="passwordRequirementsFr">
 					</div>
 					<div class="fieldHolder">
