Added a Japanese demo page, and made sure you could add a language, and updated the README to reflect this.

--- a/pwReqTest-3.html
+++ b/pwReqTest-3.html
@@ -63,7 +63,7 @@
 					<h2>En Français</h2>
 					<div class="fieldHolder">
 						<label for="pword3">Nouveau mot de passe :</label>
-						<input name="pword3" id="pword3" type="password" class="notPassword newPassword lowercase uppercase specialChar digit doubleChars" data-minchars="8" data-match="pword4"  data-passwordRequirementsDiv="passwordRequirementsFr">
+						<input name="pword3" id="pword3" type="password" class="notPassword newPassword lowercase uppercase specialChar digit doubleChars" minlength="8" data-match="pword4"  data-maxchars="20" maxlength="21" data-passwordRequirementsDiv="passwordRequirementsFr">
 					</div>
 					<div class="fieldHolder">
 						<label for="pword4">Confirmez le mot de passe :</label>
