Just finishing up some font stuff.

--- a/pwReqTest-3.html
+++ b/pwReqTest-3.html
@@ -182,4 +182,8 @@
 		<footer>
 			<p>Here is <a href="#">some random footer link</a>.</p>
 		</footer>
+				<script>
+				console.log ("Doing stuff");
+				</script>
+
 </body></html>
