--- a/japaneseDemo.html
+++ b/japaneseDemo.html
@@ -5,8 +5,8 @@
 		<meta content="width=device-width,initial-scale=1" name="viewport">
 		<title>パスワード要件テストページ</title>
 		<link rel="Stylesheet" type="text/css" href="demo.css">
-		<link rel="Stylesheet" type="text/css" href="pwReqTest.css">
-		<script src="pwReqTest-3.js"></script>
+		<link rel="Stylesheet" type="text/css" href="nordburgPwReq.css">
+		<script src="nordburgPwReq.js"></script>
 	</head>
 	<body>
 		<header>
@@ -33,7 +33,7 @@
 					<h2>日本語で</h2>
 					<div class="fieldHolder">
 						<label for="pword1">新しいパスワード:</label>
-						<input name="pword1" id="pword1" type="password" class="newPassword notPassword doubleChars nospaces" data-minchars="8" data-maxchars="10" data-match="pword2" data-passwordRequirementsDiv="passwordRequirementsEn" aria-describedby="theH1">
+						<input name="pword1" id="pword1" type="password" class="newPassword notPassword minchars maxchars digit doubleChars nospaces" data-minchars="8" data-maxchars="10" data-match="pword2" data-passwordRequirementsDiv="passwordRequirementsEn" aria-describedby="theH1">
 					</div>
 					<div class="fieldHolder">
 						<label for="pword2">パスワードを認証する:</label>
@@ -64,7 +64,7 @@
 
 &lt;div class="fieldHolder"&gt;
 	&lt;label for="pword1"&gt;新しいパスワード:&lt;/label&gt;
-	&lt;input name="pword1" id="pword1" type="password" class="newPassword notPassword doubleChars nospaces" data-minchars="8" data-maxchars="10" data-match="pword2" data-passwordRequirementsDiv="passwordRequirementsEn"&gt;
+	&lt;input name="pword1" id="pword1" type="password" class="newPassword notPassword minchars maxchars digit doubleChars nospaces" data-minchars="8" data-maxchars="10" data-match="pword2" data-passwordRequirementsDiv="passwordRequirementsEn"&gt;
 &lt;/div&gt;
 &lt;div class="fieldHolder"&gt;
 	&lt;label for="pword2"&gt;パスワードを認証する:&lt;/label&gt;
