--- a/nordburgPwReqTest-Demo.html
+++ b/nordburgPwReqTest-Demo.html
@@ -19,7 +19,7 @@
 						let re = /password/i;
 						return !(p1.match(re) || p2.match(re));
 					}};
-					nordburgPwReq.custPwRequirements["pasMotdepasse"] = {"text" : {"en" : "Does not contain 'MotDePasse' or 'Password'", "fr" : "Ne contient pas 'MotDePasse' ou 'Password'", "de" : "Da da da Ya Nein"}, check : function (p1, p2) {
+					nordburgPwReq.custPwRequirements["pasMotdepasse"] = {"text" : {"en" : "Does not contain 'MotDePasse' or 'Password'", "fr" : "Ne contient pas 'MotDePasse' ou 'Password'"}, check : function (p1, p2) {
 						let re = /password|motdepasse/i;
 						return !(p1.match(re) || p2.match(re));
 					}};
@@ -28,7 +28,7 @@
 					<h2>In English</h2>
 					<div class="fieldHolder">
 						<label for="pword1">New Password:</label>
-						<input name="pword1" id="pword1" type="password" class="newPassword minlength maxlength lowercase uppercase specialChar notPassword digit doubleChars nospaces" data-minchars="8" data-maxchars="10" data-match="pword2" data-passwordRequirementsDiv="passwordRequirementsEn" aria-describedby="theH1">
+						<input name="pword1" id="pword1" type="password" class="newPassword minlength maxlength lowercase uppercase special-char notPassword digit double-chars nospaces" data-minchars="8" data-maxchars="10" data-match="pword2" data-passwordRequirementsDiv="passwordRequirementsEn" aria-describedby="theH1">
 					</div>
 					<div class="fieldHolder">
 						<label for="pword2">Confirm Password:</label>
@@ -51,7 +51,7 @@
 
 &lt;div class="fieldHolder"&gt;
 	&lt;label for="pword1"&gt;Password:&lt;/label&gt;
-	&lt;input name="pword1" id="pword1" type="password" class="newPassword lowercase uppercase specialChar digit doubleChars nospaces" data-minchars="8" data-maxchars="10" data-match="pword2" data-passwordRequirementsDiv="passwordRequirementsEn"&gt;
+	&lt;input name="pword1" id="pword1" type="password" class="newPassword lowercase uppercase special-char digit double-chars nospaces" data-minchars="8" data-maxchars="10" data-match="pword2" data-passwordRequirementsDiv="passwordRequirementsEn"&gt;
 &lt;/div&gt;
 &lt;div class="fieldHolder"&gt;
 	&lt;label for="pword2"&gt;Confirm Password:&lt;/label&gt;
@@ -63,11 +63,11 @@
 				</section>
 
 				<section lang="fr" id="frenchDemoSect">
-					<div id="passwordRequirementsFr"></div>
+					<div id="passwordRequirementsFr" class="req-pos-before"></div>
 					<h2>En Français</h2>
 					<div class="fieldHolder">
 						<label for="pword3">Nouveau mot de passe :</label>
-						<input name="pword3" id="pword3" type="password" class="notPassword maxchars minchars newPassword lowercase uppercase specialChar digit pasMotdepasse doubleChars" minlength="4" data-minchars="6" data-match="pword4"  data-maxchars="20" maxlength="21" data-passwordRequirementsDiv="passwordRequirementsFr">
+						<input name="pword3" id="pword3" type="password" class="notPassword maxchars minchars newPassword lowercase uppercase special-char digit pasMotdepasse double-chars" minlength="4" data-minchars="6" data-match="pword4"  data-maxchars="20" maxlength="21" data-passwordRequirementsDiv="passwordRequirementsFr">
 					</div>
 					<div class="fieldHolder">
 						<label for="pword4">Confirmez le mot de passe :</label>
@@ -83,7 +83,7 @@
 ...
 &lt;div class="fieldHolder"&gt;
 	&lt;label for="pword3"&gt;Mot de passe :&lt;/label&gt;
-	&lt;input name="pword3" id="pword3" type="password" class="newPassword lowercase uppercase specialChar digit doubleChars" data-minchars="8" data-match="pword4"  data-passwordRequirementsDiv="passwordRequirementsFr"&gt;
+	&lt;input name="pword3" id="pword3" type="password" class="newPassword lowercase uppercase special-char digit double-chars" data-minchars="8" data-match="pword4"  data-passwordRequirementsDiv="passwordRequirementsFr"&gt;
 &lt;/div&gt;
 &lt;div class="fieldHolder"&gt;
 	&lt;label for="pword4"&gt;Confirmez le mot de passe :&lt;/label&gt;
